--- a/index.html
+++ b/index.html
@@ -1,16 +1,97 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Ishan Bhardwaj</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ishan Bhardwaj | Staff Engineer</title>
     <style>
-        body { font-family: sans-serif; text-align: center; padding-top: 50px; background-color: #f0f2f5; }
-        h1 { color: #333; }
-        p { color: #666; }
+        /* Minimalist "Staff Engineer" Design */
+        :root {
+            --bg-color: #ffffff;
+            --text-primary: #111111;
+            --text-secondary: #666666;
+            --accent: #2563eb; /* Professional Blue */
+        }
+        
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            background-color: var(--bg-color);
+            color: var(--text-primary);
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 80px 20px;
+            line-height: 1.6;
+        }
+
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 0.5rem;
+            letter-spacing: -0.5px;
+        }
+
+        .title {
+            font-size: 1.25rem;
+            color: var(--text-secondary);
+            font-weight: 400;
+            margin-bottom: 2rem;
+        }
+
+        .divider {
+            height: 4px;
+            width: 60px;
+            background-color: var(--text-primary);
+            margin: 2rem 0;
+        }
+
+        .bio {
+            font-size: 1.1rem;
+            color: var(--text-secondary);
+            margin-bottom: 3rem;
+        }
+
+        .links a {
+            color: var(--text-primary);
+            text-decoration: none;
+            margin-right: 20px;
+            font-weight: 600;
+            border-bottom: 2px solid transparent;
+            transition: border-color 0.2s;
+        }
+
+        .links a:hover {
+            border-bottom: 2px solid var(--accent);
+        }
+
+        .footer {
+            margin-top: 80px;
+            font-size: 0.9rem;
+            color: #999;
+        }
     </style>
 </head>
 <body>
+
     <h1>Ishan Bhardwaj</h1>
-    <p>Staff Engineer | EDA and Semiconductors</p>
-    <p>Portfolio coming soon.</p>
+    <div class="title">Staff Engineer, TechPubs @ Synopsys</div>
+    
+    <div class="divider"></div>
+
+    <div class="bio">
+        <p>I bridge the gap between complex silicon technology and user experience.</p>
+        <p>Currently leading documentation strategy and information architecture at Synopsys. My work focuses on <b>Docs-as-Code</b>, <b>API Documentation</b>, and scaling technical knowledge for enterprise systems.</p>
+        <p>Based in Bengaluru, India.</p>
+    </div>
+
+    <div class="links">
+        <a href="mailto:ishan@sibhardwaj.com">Contact</a>
+        <a href="#">LinkedIn</a>
+        <a href="#">Resume</a>
+        <a href="#">Writing Samples</a>
+    </div>
+
+    <div class="footer">
+        &copy; 2025 Ishan Bhardwaj. Hosted on GitHub Pages.
+    </div>
+
 </body>
 </html>
