--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
 
     <section>
         <h2>Selected Works & Thoughts</h2>
-        
+        <div class="item">
+    <a href="#" class="item-title">Title of your Article or Project</a>
+    <div class="item-meta">Category (e.g., Automation, API, Strategy)</div>
+    <p>A short 1-2 sentence description of what this project was and the problem you solved.</p>
+</div>
         <div class="item">
             <span class="item-title">The Shift to Docs-as-Code</span>
             <div class="item-meta">Philosophy</div>
