--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                 Always interested in discussing documentation strategy, API design, and the future of technical communication.
             </p>
             <div>
-                <a href="https://linkedin.com/in/ishan-bhardwaj-sharma" class="btn">LinkedIn</a>
+                <a href="http://linkedin.com/in/ishan-bhardwaj-6960b716a" class="btn">LinkedIn</a>
                 <a href="mailto:ishanbhardwajsharma@gmail.com" class="btn btn-outline" style="margin-left: 10px;">Email Me</a>
             </div>
         </section>
