--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             --color-tech: #0284c7;   /* Sky Blue */
             --color-arch: #7c3aed;   /* Violet */
             --color-strat: #059669;  /* Emerald */
+            --color-fin: #db2777;    /* Pink/Magenta for Finance */
+            --color-edu: #d97706;    /* Amber for Education */
             
             --radius: 16px;
             --shadow-sm: 0 2px 4px rgba(0,0,0,0.02), 0 1px 2px rgba(0,0,0,0.03);
@@ -315,7 +317,7 @@
     <nav>
         <a href="#about">About</a>
         <a href="#work">Work</a>
-        <a href="#skills">Skills</a>
+        <a href="#resources">Resources</a> <a href="#skills">Skills</a>
         <a href="#contact">Contact</a>
     </nav>
 
@@ -372,6 +374,42 @@
                     <h3>PCIe & CXL Interface Docs</h3>
                     <p>Translated register-level specifications (RTL) into developer-ready Databooks for High-Speed Controllers, directly bridging hardware design with user implementation.</p>
                     <div class="card-link">View Details →</div>
+                </a>
+
+            </div>
+        </section>
+
+        <section id="resources">
+            <h2>Personal Labs & Resources</h2>
+            <p style="margin-bottom:32px; color:var(--text-muted);">Explorations in FinTech, market analysis, and educational resources.</p>
+            <div class="grid">
+                
+                <a href="finance-tracker.html" class="card">
+                    <span class="card-category" style="color: var(--color-fin);">FinTech Eng</span>
+                    <h3>Serverless Finance Engine</h3>
+                    <p>A privacy-first personal finance tracker architected on Google Cloud using Python. Focuses on serverless scalability and data security.</p>
+                    <div class="card-link">View Case Study →</div>
+                </a>
+
+                <a href="market-updates.html" class="card">
+                    <span class="card-category" style="color: var(--color-strat);">Market Intelligence</span>
+                    <h3>Market Analysis Series</h3>
+                    <p>Daily summaries and analysis of market trends, IPOs, and stock recommendations. (Currently featuring Nov 3 - Nov 11 highlights).</p>
+                    <div class="card-link">Read Updates →</div>
+                </a>
+
+                <a href="nism-study-guide.html" class="card">
+                    <span class="card-category" style="color: var(--color-edu);">Certification</span>
+                    <h3>NISM Series V-A Guide</h3>
+                    <p>Comprehensive notes and study material for the Mutual Fund Distributors Certification Examination.</p>
+                    <div class="card-link">View Study Notes →</div>
+                </a>
+
+                <a href="app-user-guide.html" class="card">
+                    <span class="card-category" style="color: var(--color-tech);">Tech Writing</span>
+                    <h3>In-App User Guide (v24R.1)</h3>
+                    <p>Example of end-user documentation illustrating structure, clarity, and navigational flow for mobile application features.</p>
+                    <div class="card-link">View Documentation →</div>
                 </a>
 
             </div>
