--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
             <p style="margin-bottom:32px; color:var(--text-muted);">Explorations in FinTech, market analysis, and educational resources.</p>
             <div class="grid">
                 
-                <a href="finance-tracker.html" class="card">
+                <a href="blogs/finance-tracker.html" class="card">
                     <span class="card-category" style="color: var(--color-fin);">FinTech Eng</span>
                     <h3>Serverless Finance Engine</h3>
                     <p>A privacy-first personal finance tracker architected on Google Cloud using Python. Focuses on serverless scalability and data security.</p>
@@ -398,7 +398,7 @@
                     <div class="card-link">Read Updates →</div>
                 </a>
 
-                <a href="nism-study-guide.html" class="card">
+                <a href="knowledge_articles/nism-study-guide.html" class="card">
                     <span class="card-category" style="color: var(--color-edu);">Certification</span>
                     <h3>NISM Series V-A Guide</h3>
                     <p>Comprehensive notes and study material for the Mutual Fund Distributors Certification Examination.</p>
