--- a/knowledge_articles/nism-study-guide.html
+++ b/knowledge_articles/nism-study-guide.html
@@ -222,7 +222,7 @@
             <a href="#formulas" class="nav-link">Key Formulas</a>
         </div>
 
-        <a href="index.html" class="back-home">← Back to Portfolio</a>
+        <a href="../index.html" class="back-home">← Back to Portfolio</a>
     </aside>
 
     <main class="content-area">
