--- a/blogs/finance-tracker.html
+++ b/blogs/finance-tracker.html
@@ -260,7 +260,7 @@
 <body>
 
     <nav>
-        <a href="index.html" class="back-btn">← Back to Portfolio</a>
+        <a href="../index.html" class="back-home">← Back to Portfolio</a>
     </nav>
 
     <header>
