--- a/market-updates.html
+++ b/market-updates.html
@@ -110,7 +110,7 @@
 <body>
 
     <nav>
-        <a href="index.html" class="back-btn">← Back to Portfolio</a>
+        <a href="../index.html" class="back-home">← Back to Portfolio</a>
     </nav>
 
     <header>
